fix: mobile card img distortion, pet donate/delete button

--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -1,3 +1,21 @@
+* {
+    scrollbar-width: none;
+    scrollbar-color: var(--color-secondary) #ffffff;
+  }
+  *::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: var(--color-secondary);
+    border-radius: 10px;
+    border: 2px solid #ffffff;
+  }
+
 body{
     min-height: 100vh;
     display: flex;
@@ -92,31 +110,37 @@ body{
 
 .card-full{
     width: 100%;
-    max-width: 550px;
-    max-height: 280px;
+    max-width: 500px;
+    max-height: 450px;
     box-shadow: 0px 0px 5px rgba(78, 32, 150, 0.25);
     border-radius: var(--radius-4);
+    display: flex;
+    flex-direction: column;
 }
 
 .card-img-container{
-    height: 280px;
+    display: flex;
+    max-width: 100%;
+    max-height: 200px;
 }
 
 .pet-img{
     width: 100%;
-    height: 100%;
-    max-width: 200px;
+    height: auto;
+    object-fit: cover;
+    border-radius: var(--radius-4) 0 0  var(--radius-4);
 }
 
 .card-description{
     padding: 30px 15px;
     gap: 11px;
-    margin-left: 20px;
+
 }
 
 .pet-card-profile-button-edit{
     margin-top: 10px;
     max-width: 123px;
+    min-width: 123px;
 }
 
 .pet-card-profile-button-edit:hover{
@@ -127,6 +151,7 @@ body{
 .pet-card-profile-button-delete{
     margin-top: 10px;
     max-width: 123px;
+    min-width: 123px;
 }
 
 .footer-profile{
@@ -156,7 +181,17 @@ body{
     height: 50px;
 }
 
-@media (min-width:800px){
+.div-buttons-description{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    gap: 20px;
+}
+
+
+@media (min-width:950px){
     .container{
         width: 70%;
     }
@@ -171,10 +206,38 @@ body{
         width: 49%;
         min-height: 280px;
         margin-bottom: 64px;
+        flex-direction: row;
+    }
+
+    .card-img-container{
+        display: flex;
+        max-width: 50%;
+        max-height: none;
+    }
+
+    .card-description{
+        padding: 30px 15px;
+        gap: 11px;
+        margin-left: 20px; 
     }
 
     .card-description{
         max-width: 50%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .div-buttons-description{
+        flex-direction: column;
+        justify-content: flex-start;
+        gap: 10px;
+    }
+
+    .pet-img{
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+        border-radius: var(--radius-4) 0 0  var(--radius-4);
     }
 
     footer{
@@ -196,6 +259,7 @@ body{
         color: #4E2096;
     }
 }
+
 
 .animation-card{
     animation: slideUp 500ms ease forwards
